New sidebar layout

--- a/_includes/doctree.html
+++ b/_includes/doctree.html
@@ -8,7 +8,7 @@
   {%- assign section_title_tag = 'div' -%}
 {%- endif -%}
 
-<div class="doc-sections" {% if title_widget %}x-bind:class="{ 'doc-sections-open': open }"{% endif %}>
+<div class="doc-sections">
   {%- unless section_headings -%}
   <ul>
   {%- endunless -%}
