--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -26,30 +26,41 @@ main {
 /**
  * Sidebars
  */
-@include breakpoint($bp-large) {
-  .sidebar-container {
-    display: flex;
-    width: 100%;
+@mixin sidebar-open-sidebar-container {
+  display: flex;
+  width: 100%;
 
-    main {
-      flex: 1 1 auto;
-      @include padding(left, 6);
-    }
+  main {
+    flex: 1 1 auto;
+    @include padding(left, 6);
   }
 }
 
-.sidebar {
-  @include margin-y(2);
-  @include padding-y(1);
-  @include padding-x(1);
-
-  @include breakpoint($bp-large) { 
-    display: block; 
-    width: calc($bp-xlarge / 4);
-    flex-shrink: 0;
-    @include margin-y(0);
-    @include padding-y(4);
-    @include padding(left, 0);
-    @include padding(right, 6);
+@include breakpoint($bp-large) {
+  .sidebar-container {
+    @include sidebar-open-sidebar-container;
   }
+}
+
+.doc-sidebar-open .sidebar-container {
+  @include sidebar-open-sidebar-container;
+}
+
+.sidebar {
+  @include margin-y(0);
+  @include padding-y(4);
+  @include padding(left, 0);
+  @include padding(right, 6);
+  display: none;
+  width: calc($bp-xlarge / 4);
+  flex-shrink: 0;
+
+  @include breakpoint($bp-large) { display: block; }
+}
+
+.doc-sidebar-open .sidebar { display: block; }
+
+.doc-sidebar-open .page-content {
+  overflow-x: hidden;
+  @include breakpoint($bp-large) { overflow-x: visible; }
 }
